# FilesOnSchedule2

./: CMakeLists.txt  main.cpp
cpp/: Database.cpp  Database.h  Event.cpp  Event.h  Initializer.cpp  Initializer.h  Log.cpp  Personalization.cpp  Personalization.h  WeekEvents.cpp  WeekEvents.h
qml/: AddEvent.qml  DayList.qml  Error1Window.qml  Error2Window.qml  Error3Window.qml  Header.qml  Main.qml  MainContent.qml  MainWindow.qml  Settings.qml
qml/components/: SelectDateTime.qml  SelectPathField.qml  VisibleField.qml
